<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="btn_charge_green">#ea6741</color>
    <color name="btn_charge_gray">#ea6741</color>
    <color name="aqua">#48AC4E</color>
    <string name="view_tag">view_tag</string>
    <string name="app_name">【55手游.com】SDK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_user">用户</string>
    <string name="btn_gift">礼包</string>
    <string name="btn_server">客服</string>
    <string name="btn_bbs">清理</string>
    <string name="title_user">用户中心</string>
    <string name="tv_gift">礼包</string>
    <string name="onekeyregister">一键注册</string>
    <string name="login">登陆</string>
    
    <string name="wx_not_install">您还未安装微信</string>
    <string name="loading">正在努力的加载...</string>
    <string name="server_error">服务端异常请稍候重试！</string>
    <string name="net_error">网络连接错误，请检查当前网络状态！</string>
    <string name="go_wx_pay">去微信付款</string>
    <string name="wx_plug_not_install">微信支付插件安装失败，请重新下载游戏</string>
    <string name="wx_plug_message">使用微信支付需要安装微信支付插件</string>
    <string name="other_pay_way">选择其他支付方式</string>
    <string name="copy_file">正在准备支付插件</string>
    <string name="plug_install">安装</string>
    
    <string name="btn_update">立即更新</string>
    <string name="tv_update">新版上线啦！</string>
    <string name="tv_updating">新版本下载中！</string>
    <string name="tv_update_info">新版本努力更新中，请耐心等待~</string>
    <string name="btn_ignore">忽略</string>
    <string name="btn_install">立即安装</string>
    
    
    <string name="xing_load_no_data">无数据</string>
    <string name="xing_load_fail">加载失败,请点击重试</string>
    <string name="xing_dlg_notice">提示</string>
    <string name="xing_dlg_cancel">取消</string>
    <string name="xing_dlg_sure">确定</string>
    <string name="xing_dlg_loading">正在加载中，请稍候&#8230;</string>
    <string name="xing_load_loading">正在获取数据中,请稍后</string>

</resources>
