<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bg_update" />

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="53dp"
            android:text=""
            android:textColor="#fffff6"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="140dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:background="@drawable/bg_btn_update"
            android:text="@string/btn_update"
            android:textColor="#fffffa"
            />
        
        <TextView 
            android:visibility="gone"
            android:text="50%"
            android:id="@+id/tv_progress_show"
            android:layout_above="@+id/pb_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ProgressBar 
            android:visibility="gone"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/pb_progress"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:layout_width="185dp"
            android:layout_height="5dp"/>

        <TextView
            android:visibility="gone"
            android:textColor="#a4a4a4"
            android:textSize="10sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:id="@+id/tv_update_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_update_info" />
        
        <TextView 
            android:id="@+id/tv_ignore"
            android:clickable="true"
            android:background="#00000000"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_ignore"
            android:textColor="#b8b8b8"
            android:textSize="13sp"
            android:padding="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</RelativeLayout>