<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="133dip"
    android:layout_height="133dip" >

    <RelativeLayout
        android:id="@+id/item_lay"
        android:layout_width="133dip"
        android:layout_height="133dip"
        android:background="@drawable/fload_bg"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/float_item_id"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:src="@drawable/fload_pick" />

        <LinearLayout
            android:id="@+id/float_item_gift_lay"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dip"
            android:background="#00000000"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="2dip"
                android:adjustViewBounds="true"
                android:maxHeight="20dp"
                android:maxWidth="20dp"
                android:src="@drawable/float_gift_bg_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_gift"
                android:textColor="#ffffff"
                android:textSize="@dimen/float_min_font" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/float_item_server_lay"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="#00000000"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="2dip"
                android:adjustViewBounds="true"
                android:maxHeight="20dp"
                android:maxWidth="20dp"
                android:src="@drawable/float_server_bg_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_server"
                android:textColor="#ffffff"
                android:textSize="@dimen/float_min_font" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/float_item_clean_lay"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dip"
            android:background="#00000000"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="2dip"
                android:adjustViewBounds="true"
                android:maxHeight="20dp"
                android:maxWidth="20dp"
                android:src="@drawable/float_clean_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_bbs"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textSize="@dimen/float_min_font" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/float_item_user_lay"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:background="#00000000"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="2dip"
                android:adjustViewBounds="true"
                android:maxHeight="20dp"
                android:maxWidth="20dp"
                android:src="@drawable/float_user_bg_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_user"
                android:textColor="#ffffff"
                android:textSize="@dimen/float_min_font" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>